6033c6fc5af2c702367b3a93/booking/.compilation.error
exit code: 1
booking/CumputerClassRoom1.java:13: error: invalid method declaration; return type required
    public ComputerClassRoom(String name, String description, boolean hasProjector, int startTime, int endTime) {
           ^
1 error
